--- a/data_page.html
+++ b/data_page.html
@@ -697,8 +697,11 @@
                 
                 console.log('Checking permissions for:', email);
 
-                // hospitals/병원명/staff/이메일 에서 사용자 정보 확인
-                const userRef = doc(db, 'hospitals', hospitalName, 'staff', email);
+                // role이 chemist면 pharmacy 컬렉션에서, 아니면 hospitals 컬렉션에서 확인
+                const collectionName = role === 'chemist' ? 'pharmacy' : 'hospitals';
+
+                // hospitals/병원명/staff/이메일 또는 pharmacy/약국명/staff/이메일 에서 사용자 정보 확인
+                const userRef = doc(db, collectionName, hospitalName, 'staff', email);
                 const userDoc = await getDoc(userRef);
 
                 if (!userDoc.exists()) {
@@ -1002,8 +1005,11 @@
               
               console.log('Checking permissions for:', email);
 
-              // hospitals/병원명/staff/이메일 에서 사용자 정보 확인
-              const userRef = doc(db, 'hospitals', hospitalName, 'staff', email);
+              // role이 chemist면 pharmacy 컬렉션에서, 아니면 hospitals 컬렉션에서 확인
+              const collectionName = role === 'chemist' ? 'pharmacy' : 'hospitals';
+
+              // hospitals/병원명/staff/이메일 또는 pharmacy/약국명/staff/이메일 에서 사용자 정보 확인
+              const userRef = doc(db, collectionName, hospitalName, 'staff', email);
               const userDoc = await getDoc(userRef);
 
               if (!userDoc.exists()) {
