--- a/setup_account.html
+++ b/setup_account.html
@@ -37,6 +37,10 @@
             <input type="text" id="uid" placeholder="Authentication의 UID 입력">
         </div>
         <div class="form-group">
+            <label>이메일:</label>
+            <input type="email" id="email" placeholder="UID에 연결된 이메일 주소">
+        </div>
+        <div class="form-group">
             <label>역할:</label>
             <select id="role">
                 <option value="doctor">Doctor</option>
@@ -64,6 +68,10 @@
             <label>유형:</label>
             <input type="text" id="type" placeholder="예: dental">
         </div>
+        <div class="form-group">
+            <label>담당자 이름:</label>
+            <input type="text" id="staffName" placeholder="예: John Doe">
+        </div>
     </div>
 
     <button onclick="setupAccount()">계정 생성</button>
@@ -71,6 +79,7 @@
     <script type="module">
         // Firebase SDK 임포트
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+        import { getAuth } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
         import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
         // Firebase 초기화
@@ -85,48 +94,36 @@
         };
 
         const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
         const db = getFirestore(app);
 
         // 계정 설정 함수
         window.setupAccount = async function() {
             try {
                 const uid = document.getElementById('uid').value;
+                const email = document.getElementById('email').value;  // 이메일 직접 입력받음
                 const role = document.getElementById('role').value;
                 const hospitalName = document.getElementById('hospitalName').value;
                 const hospitalCode = document.getElementById('hospitalCode').value;
                 const region = document.getElementById('region').value;
                 const type = document.getElementById('type').value;
+                const staffName = document.getElementById('staffName').value;
 
-                console.log('입력값 확인:', {
-                    uid, role, hospitalName, hospitalCode, region, type
-                });
+                // 이메일에서 병원ID 추출
+                const [hospitalId] = email.split('@')[0].split('.');
 
-                if (!uid || !hospitalName || !hospitalCode || !region || !type) {
-                    alert('모든 필드를 입력해주세요');
-                    return;
-                }
-
-                // 병원 ID는 병원 이름을 소문자로 변환하여 사용
-                const hospitalId = hospitalName.toLowerCase().replace(/\s+/g, '');
-                const number = '001';
-                const email = `${hospitalId}.${role}.${number}@mediqore.com`;
-
-                const userData = {
+                // staff 정보 저장
+                const staffRef = doc(db, 'hospitals', hospitalId, 'staff', email);
+                await setDoc(staffRef, {
                     role: role,
                     status: 'active',
-                    number: number,
-                    created: new Date()
-                };
+                    created: new Date(),
+                    name: staffName,
+                    email: email
+                });
 
-                // role이 chemist면 pharmacy 컬렉션에, 아니면 hospitals 컬렉션에 저장
-                const collectionName = role === 'chemist' ? 'pharmacy' : 'hospitals';
-                
-                // staff 정보 저장
-                const staffRef = doc(db, collectionName, hospitalId, 'staff', email);
-                await setDoc(staffRef, userData);
-
-                // 병원/약국 정보 저장
-                const hospitalRef = doc(db, collectionName, hospitalId);
+                // 병원 정보 저장
+                const hospitalRef = doc(db, 'hospitals', hospitalId);
                 await setDoc(hospitalRef, {
                     info: {
                         name: hospitalName,
