--- a/setup_account.html
+++ b/setup_account.html
@@ -80,7 +80,7 @@
         // Firebase SDK 임포트
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
         import { getAuth } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
-        import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+        import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
         // Firebase 초기화
         const firebaseConfig = {
@@ -117,7 +117,8 @@
                 await setDoc(staffRef, {
                     role: role,
                     status: 'active',
-                    created: new Date(),
+                    work: 'logout',  // 기본 work 상태를 'logout'으로 설정
+                    createdAt: serverTimestamp(),
                     name: staffName,
                     email: email
                 });
