--- a/data_page.html
+++ b/data_page.html
@@ -243,7 +243,29 @@
             background-color: white;
             border-right: 1px solid hsl(0, 0%, 85%);
             border-left: 1px solid hsl(0, 0%, 85%);
-            border-top: 1px solid hsl(0, 0%, 85%);  /* 상단 테두리 추가 */
+            border-top: 1px solid hsl(0, 0%, 85%);
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* 중간 컨테이너 스타일 */
+        .patient-list-container {
+            flex: 1;  /* 남은 공간 모두 차지 */
+            overflow-y: auto;  /* 내용이 많을 경우 스크롤 */
+        }
+
+        /* 회색 가로선 스타일 */
+        .sidebar2-divider {
+            width: 100%;
+            height: 1px;
+            background-color: hsl(0, 0%, 85%);
+        }
+
+        /* 맨 아래 컨테이너 스타일 */
+        .sidebar2-bottom {
+            width: 100%;
+            height: 42px;
+            background-color: white;
         }
 
         /* patient-list-title: 환자 목록 제목 */
@@ -1489,6 +1511,13 @@
             <div class="submenu-item">Waitting</div>
             <div class="submenu-item">RSVD</div>
             <div class="submenu-item">Visit</div>
+        </div>
+        <div class="patient-list-container">
+            <!-- 중간 컨테이너 내용 -->
+        </div>
+        <div class="sidebar2-divider"></div>
+        <div class="sidebar2-bottom">
+            <!-- 맨 아래 컨테이너 내용 -->
         </div>
     </div>
     <div class="main-content">
