--- a/data_page.html
+++ b/data_page.html
@@ -1710,7 +1710,7 @@
     <div class="sidebar2">
         <div class="patient-list-title">Patient List</div>
         <div class="submenu-container">
-            <div class="submenu-item active">Waitting</div>
+            <div class="submenu-item active">Waiting</div>
             <div class="submenu-item">RSVD</div>
             <div class="submenu-item">Visit</div>
         </div>
@@ -2198,7 +2198,7 @@
                   
                   // 선택된 메뉴에 따라 해당 컨테이너만 표시
                   const menuText = this.textContent.trim();
-                  if (menuText === 'Waitting') {
+                  if (menuText === 'Waiting') {
                       document.querySelector('.patient-list-container').style.display = 'block';
                   } else if (menuText === 'RSVD') {
                       document.querySelector('.rsvd-list-container').style.display = 'block';
