--- a/data_page.html
+++ b/data_page.html
@@ -298,6 +298,11 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 12px;
+            transition: background-color 0.3s ease;
+        }
+
+        .exit-btn:hover {
+            background-color: #cc3333;
         }
 
         .room-item:last-child {
@@ -319,6 +324,11 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 12px;
+            transition: background-color 0.3s ease;
+        }
+
+        .join-btn:hover {
+            background-color: rgb(0, 82, 204);
         }
 
         /* patient-list-title: 환자 목록 제목 */
@@ -892,11 +902,16 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 20px;
+            position: relative;  /* 자식 요소의 absolute 포지셔닝 기준점 */
         }
 
         .month-year {
             font-size: 20px;
             font-weight: bold;
+            position: absolute;  /* 부모 기준 절대 위치 */
+            left: 50%;          /* 부모의 중앙에서 시작 */
+            transform: translateX(-50%);  /* 자신의 너비의 절반만큼 왼쪽으로 이동 */
+            text-align: center;
         }
 
         .calendar-nav button {
@@ -999,6 +1014,23 @@
         .date:nth-child(7n),   /* 토요일 */
         .date:nth-child(7n+1) { /* 일요일 */
             color: #ff0000;
+        }
+
+        /* 달력 뷰 전환 버튼 스타일 */
+        .calendar-view-btn {
+            padding: 8px 16px;
+            background-color: rgb(0, 102, 255);
+            color: rgb(255, 255, 255);
+            border: none;
+            border-radius: 6px;
+            font-size: 14px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-right: 10px;
+        }
+
+        .calendar-view-btn:hover {
+            background-color: rgb(0, 82, 204);
         }
     </style>
     <script>
@@ -1989,6 +2021,9 @@
                         </div>
                         <div class="month-year">2024년 3월</div>
                         <div class="calendar-nav">
+                            <button class="calendar-view-btn">Month</button>
+                            <button class="calendar-view-btn">Week</button>
+                            <button class="calendar-view-btn">Day</button>
                             <button id="nextMonth">다음 &gt;</button>
                         </div>
                     </div>
