--- a/data_page.html
+++ b/data_page.html
@@ -2017,14 +2017,14 @@
                 <div class="custom-calendar">
                     <div class="calendar-header">
                         <div class="calendar-nav">
-                            <button id="prevMonth">&lt; 이전</button>
+                            <button id="prevMonth">&lt; Prev</button>
                         </div>
                         <div class="month-year">2024년 3월</div>
                         <div class="calendar-nav">
                             <button class="calendar-view-btn">Month</button>
                             <button class="calendar-view-btn">Week</button>
                             <button class="calendar-view-btn">Day</button>
-                            <button id="nextMonth">다음 &gt;</button>
+                            <button id="nextMonth">Next &gt;</button>
                         </div>
                     </div>
                     <div class="calendar-grid">
