--- a/data_page.html
+++ b/data_page.html
@@ -1078,6 +1078,27 @@
             right: 0;
             background-color: white;
         }
+
+        /* 환자 정보 카드 스타일 */
+        .patient-info-container {
+            width: calc 80%;  /* margin과 padding을 모두 고려한 너비 계산 */
+            margin: 10px;
+            padding: 10px;
+            border: 1px solid hsl(0, 0%, 85%);
+            border-radius: 8px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: white;
+        }
+
+        .patient-info-container span {
+            flex: 1;  /* 각 텍스트 요소가 동일한 공간 차지 */
+            text-align: center;  /* 텍스트 중앙 정렬 */
+            padding: 0 10px;  /* 텍스트 간 좌우 간격 */
+            color: rgb(110, 110, 124);  /* 회색 텍스트 */
+            font-size: 12px;  /* 텍스트 크기 */
+        }
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
