--- a/data_page.html
+++ b/data_page.html
@@ -1255,7 +1255,7 @@
 
         .tooltip-form input,
         .date-select-group {
-            margin-bottom: 30px;  /* 입력 요소 아래 여백 통일 */
+            margin-bottom: 20px;  /* 입력 요소 아래 여백 통일 */
             margin-top: 8px;      /* 라벨과 입력 요소 사이 간격 */
         }
 
@@ -1273,6 +1273,41 @@
         .selected-date {
             color: rgb(110, 110, 124);
             font-size: 12px;
+        }
+
+        /* 팝업 헤더 스타일 */
+        .tooltip-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            border-bottom: 1px solid #ddd;
+            margin-bottom: 15px;
+        }
+
+        .tooltip-date {
+            color: rgb(110, 110, 124);
+            font-size: 16px;
+        }
+
+        /* 닫기 버튼 위치 조정 */
+        .tooltip-close {
+            position: static;  /* absolute 제거 */
+            cursor: pointer;
+            font-size: 18px;
+            color: #666;
+        }
+
+        /* 입력폼 컨테이너에 패딩 추가 */
+        .tooltip-form {
+            padding: 0 15px;
+        }
+
+        /* RSVD 버튼 컨테이너 */
+        .tooltip-footer {
+            padding: 15px;
+            display: flex;
+            justify-content: flex-end;  /* 버튼 우측 정렬 */
         }
     </style>
     <script>
@@ -2998,7 +3033,10 @@
               const tooltip = document.createElement('div');
               tooltip.className = 'date-tooltip';
               tooltip.innerHTML = `
-                  <span class="tooltip-close">&times;</span>
+                  <div class="tooltip-header">
+                      <span class="tooltip-date">${this.formatDate(date)}</span>
+                      <span class="tooltip-close">&times;</span>
+                  </div>
                   <form class="tooltip-form">
                       <label>Name</label>
                       <input type="text" class="tooltip-name">
@@ -3056,7 +3094,6 @@
                       </div>
                   </form>
                   <div class="tooltip-footer">
-                      <span class="selected-date">${this.formatDate(date)}</span>
                       <button class="tooltip-rsvd">RSVD</button>
                   </div>
               `;
